# solar-calculations

./: CMakeLists.txt  Cargo.toml  README.md
cpp/: angle.h  bench.cpp  julian_date.h  noaa_sun.cpp  redshift_solar.c  redshift_solar.cpp  rust_sun_ffi.h  solar.c  solar.cpp  solar.h  sun.cpp  sun.h  sun2.cpp  sunrise-test.cpp  wiki_sun.cpp
rust/src/: lib.rs
src/: angle.rs  astro.rs  julian.rs
